--- a/ECG.xcodeproj/xcshareddata/xcschemes/ECG.xcscheme
+++ b/ECG.xcodeproj/xcshareddata/xcschemes/ECG.xcscheme
@@ -47,7 +47,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/Shared/Development/Projects/TensorFlow/ECG/Data"
+      customWorkingDirectory = "$PROJECT_DIR/Data"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
